# memoria

./: design.md  main.py  pyproject.toml
.trae/rules/: project_rules.md
mcp_server_pg/: .flake8  Dockerfile  README.md  docker-compose.yml  pyproject.toml
mcp_server_pg/src/: embeddings.py  main.py
mcp_server_pg/src/db/: pool.py  schema.sql
mcp_server_pg/src/memory/: manager.py  schemas.py
mcp_server_pg/tests/: conftest.py  test_manager.py
